# CProjects

./: .pydevinit  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh
docs/: conf.py  index.md  installation.md  usage.md
rprojc/: __init__.py  cli.py  utils.py
rprojectc/: __init__.py
